--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Italy -- Social conditions'
 - !lcsh 'Italy -- History -- 1789-1815'
 - !lcc 'DG'
+- GITenberg
 title: "Antonio Canova (1757-1822), e l'arte de' suoi tempi\r\nLa vita italiana durante\
   \ la Rivoluzione francese e l'Impero"
 url: http://www.gutenberg.org/ebooks/43171
